--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -79,6 +79,11 @@ body {
 					type="password" class="form-control" id="password" name="password"
 					required>
 			</div>
+			<div class="mb-3">
+				<label for="profileImage" class="form-label">Profile Image</label> <input
+					type="file" class="form-control" id="profileImage"
+					name="profileImage" accept="image/*">
+			</div>
 			<button type="submit" class="btn btn-custom">Register</button>
 		</form>
 	</div>
