--- a/src/main/resources/templates/userhome.html
+++ b/src/main/resources/templates/userhome.html
@@ -102,7 +102,8 @@ body {
 				</ul>
 				<div class="user-profile" id="userProfile">
 					<img src="/api/placeholder/40/40" alt="User Profile"
-						id="userProfilePic"> <span id="userProfileName">Loading...</span>
+						id="userProfilePic" class="profile-image"> <span
+						id="userProfileName">Loading...</span>
 				</div>
 			</div>
 		</div>
@@ -113,7 +114,8 @@ body {
 			<i class="fas fa-times"></i>
 		</div>
 		<h4>Profile Details</h4>
-		<img src="/api/placeholder/100/100" alt="User Profile" class="mb-3"
+		<img src="/api/placeholder/100/100" alt="User Profile"
+			class="mb-3 profile-image"
 			style="width: 100px; height: 100px; border-radius: 50%;">
 		<p>
 			<strong>First Name:</strong> <span id="profileFirstName"></span>
@@ -170,9 +172,8 @@ body {
 
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-		<script src="/js/userhome.js"></script>
-		<script>
-		
+	<script src="/js/userhome.js"></script>
+	<script>
 		function toggleProfileDetails() {
 			const profileDetails = document.getElementById('profileDetails');
 			profileDetails.classList.toggle('show');
@@ -182,30 +183,6 @@ body {
 				toggleProfileDetails);
 		document.getElementById('profileDetails').addEventListener(
 				'mouseleave', toggleProfileDetails);
-
 	</script>
-	<!-- <script>
-		function toggleProfileDetails() {
-			const profileDetails = document.getElementById('profileDetails');
-			profileDetails.classList.toggle('show');
-		}
-
-		// Toggle the profile on user profile click
-		document.getElementById('userProfile').addEventListener('click',
-				toggleProfileDetails);
-
-		// Close the profile when clicking outside of it
-		document.addEventListener('click', function(event) {
-			const profileDetails = document.getElementById('profileDetails');
-			const userProfile = document.getElementById('userProfile');
-
-			// If the click is outside the profile details and user profile, hide the profile
-			if (!profileDetails.contains(event.target)
-					&& !userProfile.contains(event.target)) {
-				profileDetails.classList.remove('show');
-			}
-		});
-	</script> -->
-
 </body>
 </html>
