Community Forum Done

--- a/src/main/resources/templates/Post.html
+++ b/src/main/resources/templates/Post.html
@@ -92,12 +92,12 @@ body {
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ms-auto">
-					<li class="nav-item"><a class="nav-link" href="#"><i
+					<li class="nav-item"><a class="nav-link" href="/userhome"><i
 							class="fas fa-home"></i> Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="/post"><i
-							class="fas fa-users"></i> Post</a></li>
+							class="fas fa-user"></i> Post</a></li>
 					<li class="nav-item"><a class="nav-link" href="/communityPost"><i
-							class="fas fa-user"></i>communityPost</a></li>
+							class="fas fa-users"></i>communityPost</a></li>
 				</ul>
 			</div>
 		</div>
@@ -127,11 +127,7 @@ body {
 		<!-- Forum Posts Container -->
 		<div id="forumPosts"></div>
 
-		<!-- Load More Button -->
-		<div class="text-center mt-4 mb-5">
-			<button id="loadMoreBtn" class="btn btn-outline-success">Load
-				More Posts</button>
-		</div>
+
 	</div>
 
 	<script
