Plant Identification Done with API

--- a/src/main/resources/templates/communityPost.html
+++ b/src/main/resources/templates/communityPost.html
@@ -102,6 +102,9 @@ body {
 							class="fas fa-user"></i> Post</a></li>
 					<li class="nav-item"><a class="nav-link" href="/communityPost"><i
 							class="fas fa-users"></i>communityPost</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="/plantidentification"><i class="fas fa-seedling"></i>
+							Plant Identifier</a></li>
 				</ul>
 			</div>
 		</div>
