--- a/src/main/resources/templates/userhome.html
+++ b/src/main/resources/templates/userhome.html
@@ -108,6 +108,9 @@ body {
 							class="fas fa-comments"></i> Post</a></li>
 					<li class="nav-item"><a class="nav-link" href="/communityPost"><i
 							class="fas fa-home"></i> Community Post</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="/plantidentification"><i class="fas fa-seedling"></i>
+							Plant Identifier</a></li>
 				</ul>
 				<div class="user-profile" id="userProfile">
 					<img src="/api/placeholder/40/40" alt="User Profile"
