somes changes made

--- a/src/main/resources/templates/communityPost.html
+++ b/src/main/resources/templates/communityPost.html
@@ -127,9 +127,7 @@ body {
 
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-	<script src="/js/communityPost.js">
-		
-	</script>
+	<script src="/js/communityPost.js"></script>
 </body>
 
 </html>
