added refresh token service on every request

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -89,8 +89,7 @@ body {
 	</div>
 
 	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-	<script src="/js/register.js"></script>
+		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script><script src="/js/register.js"></script>
 	<!-- Link to your JavaScript file -->
 </body>
 </html>
