--- a/src/main/resources/templates/Post.html
+++ b/src/main/resources/templates/Post.html
@@ -135,6 +135,7 @@ body {
 
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+	<script src="/js/auth.js"></script>
 	<script src="/js/post.js"></script>
 
 </body>
