--- a/src/main/resources/templates/plantidentification.html
+++ b/src/main/resources/templates/plantidentification.html
@@ -142,6 +142,7 @@ body {
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="/js/auth.js"></script>
 	<script src="/js/plantIdentify.js"></script>
 </body>
 </html>
