--- a/src/main/resources/templates/userhome.html
+++ b/src/main/resources/templates/userhome.html
@@ -210,6 +210,7 @@ body {
 
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+	<script src="/js/auth.js"></script>
 	<script src="/js/userhome.js"></script>
 	<script>
 		function toggleProfileDetails() {
