--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -60,16 +60,15 @@ body {
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto">
-						<li class="nav-item"><a class="nav-link" href="#home">Home</a>
-						</li>
+						<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="#about">About
 								Us</a></li>
 						<li class="nav-item"><a class="nav-link" href="#support">Support</a>
 						</li>
-						<li class="nav-item"><a class="nav-link" href="signin.html">Sign
+						<li class="nav-item"><a class="nav-link" href="/signIn">Sign
 								In</a></li>
 						<li class="nav-item"><a class="btn btn-success"
-							href="signup.html">Sign Up</a></li>
+							href="/signUp">Sign Up</a></li>
 					</ul>
 				</div>
 			</div>
@@ -128,7 +127,7 @@ body {
 					Community</h2>
 				<p class="lead text-muted mb-4">Sign up now to access all
 					features, including your personal post management dashboard.</p>
-				<a href="signup.html" class="btn btn-success btn-lg">Get Started</a>
+				<a href="/signUp" class="btn btn-success btn-lg">Get Started</a>
 			</div>
 		</section>
 
