--- a/src/main/resources/templates/plantidentification.html
+++ b/src/main/resources/templates/plantidentification.html
@@ -12,14 +12,9 @@
 	rel="stylesheet">
 <style>
 body {
-	background-color: #f0f7f0;
-	background-image: linear-gradient(120deg, rgba(255, 255, 255, .6) 25%,
-		transparent 25%), linear-gradient(240deg, rgba(255, 255, 255, .6) 25%,
-		transparent 25%), linear-gradient(60deg, rgba(255, 255, 255, .6) 25%,
-		transparent 25%), linear-gradient(300deg, rgba(255, 255, 255, .6) 25%,
-		transparent 25%);
+	background-color: #f0f8ea;
 	background-size: 20px 35px;
-	font-family: 'Arial', sans-serif;
+	/* font-family: 'Arial', sans-serif; */
 }
 
 .main-container {
@@ -169,7 +164,7 @@ body {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
 		<div class="container">
 			<a class="navbar-brand" href="#"><i class="fas fa-leaf mr-2"></i>
 				Green Haven Forum</a>
@@ -186,10 +181,13 @@ body {
 					<li class="nav-item"><a class="nav-link" href="/post"><i
 							class="fas fa-user"></i> Post</a></li>
 					<li class="nav-item"><a class="nav-link" href="/communityPost"><i
-							class="fas fa-users"></i> Community Post</a></li>
+							class="fas fa-users"></i> communityPost</a></li>
 					<li class="nav-item"><a class="nav-link active"
 						href="/plantidentification"><i class="fas fa-seedling"></i>
 							Plant Identifier</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="/plantsearch"><i class="fas fa-seedling"></i> Grow Wise
+							Advisor</a></li>
 				</ul>
 			</div>
 		</div>
