--- a/src/main/resources/templates/userhome.html
+++ b/src/main/resources/templates/userhome.html
@@ -90,7 +90,7 @@ body {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
 		<div class="container">
 			<a class="navbar-brand" href="#"><i class="fas fa-leaf mr-2"></i>
 				Green Haven</a>
@@ -111,6 +111,9 @@ body {
 					<li class="nav-item"><a class="nav-link active"
 						href="/plantidentification"><i class="fas fa-seedling"></i>
 							Plant Identifier</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="/plantsearch"><i class="fas fa-seedling"></i> Grow Wise
+							Advisor</a></li>
 				</ul>
 				<div class="user-profile" id="userProfile">
 					<img src="/api/placeholder/40/40" alt="User Profile"
