--- a/src/main/resources/templates/Post.html
+++ b/src/main/resources/templates/Post.html
@@ -103,7 +103,7 @@ body {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
 		<div class="container">
 			<a class="navbar-brand" href="#"><i class="fas fa-leaf mr-2"></i>
 				Green Haven Forum</a>
@@ -120,10 +120,13 @@ body {
 					<li class="nav-item"><a class="nav-link" href="/post"><i
 							class="fas fa-user"></i> Post</a></li>
 					<li class="nav-item"><a class="nav-link" href="/communityPost"><i
-							class="fas fa-users"></i>communityPost</a></li>
+							class="fas fa-users"></i> communityPost</a></li>
 					<li class="nav-item"><a class="nav-link active"
 						href="/plantidentification"><i class="fas fa-seedling"></i>
 							Plant Identifier</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="/plantsearch"><i class="fas fa-seedling"></i> Grow Wise
+							Advisor</a></li>
 				</ul>
 			</div>
 		</div>
