--- a/src/main/resources/templates/communityPost.html
+++ b/src/main/resources/templates/communityPost.html
@@ -109,7 +109,7 @@ body {
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
 		<div class="container">
 			<a class="navbar-brand" href="#"><i class="fas fa-leaf mr-2"></i>
 				Green Haven Forum</a>
@@ -130,6 +130,9 @@ body {
 					<li class="nav-item"><a class="nav-link active"
 						href="/plantidentification"><i class="fas fa-seedling"></i>
 							Plant Identifier</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="/plantsearch"><i class="fas fa-seedling"></i> Grow Wise
+							Advisor</a></li>
 				</ul>
 			</div>
 		</div>
